# ttsbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
src/: lib.rs  main.rs  option_builder.rs  option_storage.rs
src/tts/: mod.rs  voice_text.rs  voice_vox.rs
