[package]
name = "ttsbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive", "env"] }
derive_builder = "0.11.1"
dotenv = "0.15.0"
lingua = { version = "1.4.0", default-features = false, features = ["english", "japanese"]}
once_cell = "1.10.0"
parking_lot = { version = "0.12.0", features = ["send_guard"] }
reqwest = "0.11.10"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serenity = { version = "0.10.10", features = ["voice"] }
songbird = "0.2.2"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "mysql", "json"] }
strum = { version = "0.24.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.10"
uuid = { version = "0.8.2", features = ["v4"] }
